--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Assignment1 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Assignment1 main.c cpu.c cpu.h memory.c memory.h clock.c clock.h clock_internal.h cpu_internal.h memory_internal.h command_parser.c command_parser.h)
+add_executable(Assignment1 main.c cpu.c cpu.h memory.c memory.h clock.c clock.h cs3421_emul.c)
